--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 
 <head>
 	<meta charset="UTF-8">
-	<link rel="icon" href="/4d_web_logo.ico">
+	<link rel="icon" href="/image/4D_favicon.webp">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>4DNum Results</title>
 </head>
