--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<div id="app"></div>
+	<div id="app" style="height: 100% !important;     background-color: rgb(245, 245, 245);"></div>
 	<script type="module" src="/src/main.js"></script>
 </body>
 
