Update Topbar, LeftSideBar, and Favicon

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>4DNum Results</title>
+	<title>Atas 4D</title>
 </head>
 
 <body>
